- Fixed segfault in ZTS mode when OCI8 statements containing sub-statements 
  are destroyed in wrong order. (Tony)
- Fixed the validate email filter so that the letter "v" can also be used in
  the user part of the email address. (Derick)
- Fixed bug #40297 (compile failure in ZTS mode when collections support is 
  missing). (Tony)
- Fixed bug #40259 (ob_start call many times - memory error). (Dmitry)
- Fixed bug #40231 (file_exists incorrectly reports false). (Dmitry)
- Fixed bug #40228 (ZipArchive::extractTo does create empty directories 
  recursively). (Pierre)
- Fixed bug #40200 (The FastCgi version has different realpath results than 
  thread safe version). (Dmitry)
- Fixed bug #40191 (use of array_unique() with objects triggers segfault). 
  (Tony)
- Fixed bug #40189 (possible endless loop in zlib.inflate stream filter).
  (Greg, Tony)
- Fixed bug #40169 (CURLOPT_TCP_NODELAY only available in curl >= 7.11.2). 
  (Tony)
- Fixed bug #40129 (iconv extension doesn't compile with CodeWarrior on 
  Netware). (gk at gknw dot de, Tony)
- Fixed bug #40127 (apache2handler doesn't compile on Netware). 
  (gk at gknw dot de)
- Fixed bug #40121 (PDO_DBLIB driver wont free statements). (Ilia)
- Fixed bug #40098 (php_fopen_primary_script() not thread safe). (Ilia)
- Fixed bug #40092 (chroot() doesn't clear realpath cache). (Dmitry)
- Fixed bug #40091 (spl_autoload_register with 2 instances of the same class).
  (Ilia)
- Fixed bug #40083 (milter SAPI functions always return false/null). (Tony)
- Fixed bug #40079 (php_get_current_user() not thread safe).
  (Ilia, wharmby at uk dot ibm dot com)
- Fixed bug #40078 (ORA-01405 when fetching NULL values using
  oci_bind_array_by_name()). (Tony)
- Fixed bug #40076 (zend_alloc.c: Value of enumeration constant must be in 
  range of signed integer). (Dmitry)
- Fixed bug #40073 (exif_read_data dies on certain images). (Tony, Marcus)
- Fixed bug #40036 (empty() does not work correctly with ArrayObject when 